# collect_currency

./: pyproject.toml
collect_currency/: manage.py
collect_currency/collect_currency/: asgi.py  settings.py  urls.py  wsgi.py
collect_currency/currency_app/: admin.py  models.py  views.py
collect_currency/currency_app/management/commands/: download_rates.py
collect_currency/currency_app/migrations/: 0001_initial.py
