[tool.poetry]
name = "collect-currency"
version = "0.1.0"
description = ""
authors = ["Rasul Cheerchiev <rasuliomusic@gmail.com>"]
readme = "README.md"
packages = [{include = "collect_currency"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
